# decision_stumps-c50-project

./: .gitignore  LICENSE  README.md  fix_imports.py  install_dev.py  pyproject.toml  requirements.txt  setup.py
examples/: 01_basic_decision_stump.py  02_c50_stump_comparison.py  03_benchmark_sklearn.ipynb  04_benchmark_binary_classification.ipynb  05_feature_selection_stumps.ipynb  RAPPORT_BENCHMARK.md  RAPPORT_BINARY.md  RAPPORT_FEATURE_SELECTION.md
src/: __init__.py
src/c50/: README_C50_STUMP.md  __init__.py  stump.py
src/decision_stump/: __init__.py  criteria.py  stump.py
src/decision_trees_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_c50_stump.py  test_decision_stump.py  test_nan_fix.py
