[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-trees-ml"
version = "1.0.0"
description = "Implementation complete de Decision Stumps et C5.0 from scratch"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Equipe ENSAM Meknes", email = "votre.email@example.com"}
]
keywords = [
    "machine-learning",
    "decision-trees",
    "decision-stumps",
    "c50",
    "c4.5",
    "classification",
    "ensemble-learning",
    "adaboost"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "matplotlib>=3.4.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]
viz = [
    "graphviz>=0.20.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/votre-repo/decision_stumps_c50"
Documentation = "https://decision-trees-ml.readthedocs.io"
Repository = "https://github.com/votre-repo/decision_stumps_c50"
Issues = "https://github.com/votre-repo/decision_stumps_c50/issues"

[project.scripts]
dt-train = "scripts.train_model:main"
dt-evaluate = "scripts.evaluate_model:main"

[tool.setuptools]
packages = ["decision_stump", "c50", "ensemble", "visualization", "utils"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100